--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-m', '30g', '-t', 'gcr.io/sunny-might-421907-m4/cnrstmp:alpha', '.']
+  args: ['build', '-m', '30g', '-t', 'gcr.io/sunny-might-421907-m4/scmultiomecnrsR:alpha', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/sunny-might-421907-m4/cnrstmp:alpha']
+  args: ['push', 'gcr.io/sunny-might-421907-m4/scmultiomecnrsR:alpha']
 options:
-  machineType: '
+ machineType: 'E2-MICRO'
+timeout: 9600s
