--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,5 +4,5 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/sunny-might-421907-m4/scmultiomecnrsR:alpha']
 options:
- machineType: 'e2-standard-2'
+ machineType: 'E2_MICRO'
 timeout: 9600s
