--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,4 +5,5 @@ steps:
   args: ['push', 'gcr.io/sunny-might-421907-m4/scmultiomecnrsR:alpha']
 options:
  machineType: 'E2_HIGHCPU_8'
+ defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
 timeout: 9600s
