--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,8 +54,7 @@ Imports:
     BSgenome.Hsapiens.UCSC.hg38,
     CiteFuse,
     SingleCellExperiment,
-    Signac,
-    SeuratDisk
+    Signac
 Suggests: 
     knitr,
     rmarkdown,
