--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,4 +69,5 @@ Remotes:
     immunogenomics/presto,
     jokergoo/ComplexHeatmap,
     cole-trapnell-lab/monocle3,
-    mojaveazure/seurat-disk
+    mojaveazure/seurat-disk,
+    satijalab/seurat
