--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,19 @@
-url: ~
+url: https://carissaynchen.github.io/SCMultiome-CNRS-workshop-R/
 template:
+  bootswatch: flatly
   bootstrap: 5
+navbar:
+ components:
+   articles:
+    text: Articles
+    menu:
+      - text: Introduction to single-cell pre-processing
+        href: articles/introduction_to_single-cell.html
+      - text: Basics of single-cell annotation
+        href: articles/basics_of_single-cell_annotation.html
+      - text: Advanced Cell Phenotyping
+        href: articles/advancedphenotyping.html
+   github:
+      icon: fa-github
+      href: https://github.com/carissaynchen/SCMultiome-CNRS-workshop-R
+      
