--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,6 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/sunny-might-421907-m4/scmultiomecnrsr:alpha']
 options:
- machineType: 'N2_STANDARD_32'
+ machineType: 'e2-standard-2'
  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
 timeout: 9600s
